# reticulum-aiov2-lora

./: .gitignore  README.md  pyproject.toml
deploy/: README.md
deploy/reticulum-radio/: config
deploy/systemd/: rnsd-radio.service
docs/: hardware.md
rns/cm5/: config
rns/interfaces/: SX1262Interface.py
rns/mac-test/: config
rns/peer/: config
src/sx1262/: __init__.py  driver.py
tests/: announce_peer.py  cw_test.py  link_test.py  probe_readonly.py  rx_dump.py  rx_listen.py  test_loradecode.py  tx_beacon.py  tx_capture.py
tools/: README.md  loradecode.py  specgram.py
